Add print list with pagination for report, article, Q&A