@@ -1,35 +1,52 @@
 package ds.pirate.backend.service.SettingService;
 
 import java.time.LocalDateTime;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
+import javax.persistence.EntityManager;
+import javax.persistence.PersistenceContext;
+import javax.transaction.Transactional;
+
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+
+import com.querydsl.jpa.impl.JPADeleteClause;
 
 import ds.pirate.backend.dto.QuestionDTO;
 import ds.pirate.backend.dto.airUserDTO;
 import ds.pirate.backend.dto.reportDTO;
+import ds.pirate.backend.entity.QArticlesList;
+import ds.pirate.backend.entity.QHashTags;
+import ds.pirate.backend.entity.QImagesList;
+import ds.pirate.backend.entity.Qacomments;
+import ds.pirate.backend.entity.Qalarm;
+import ds.pirate.backend.entity.QreportList;
 import ds.pirate.backend.entity.QuestionsList;
 import ds.pirate.backend.entity.airUser;
 import ds.pirate.backend.entity.reportList;
 import ds.pirate.backend.entity.uImagesList;
 import ds.pirate.backend.repository.ArticleReportRepository;
+import ds.pirate.backend.repository.ArticleRepository;
 import ds.pirate.backend.repository.QuestionRepository;
 import ds.pirate.backend.repository.UserImageListRepository;
 import ds.pirate.backend.repository.UserRepository;
+import ds.pirate.backend.repository.ArticleRepository.getMyChannelArticleList;
 import ds.pirate.backend.service.ArticleService.ArticleService;
-import ds.pirate.backend.service.QuestionService.QuestionService;
 import ds.pirate.backend.service.UserService.UserService;
+import ds.pirate.backend.vo.channelArticleList;
+import ds.pirate.backend.vo.settingArticleList;
 import ds.pirate.backend.vo.userid;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.log4j.Log4j2;
 
 @Service
 @RequiredArgsConstructor
-@Log4j2
 public class SettingServiceImpl implements SettingService {
   private final UserRepository urepo;
   private final UserImageListRepository uirepo;
@@ -38,7 +55,18 @@ public class SettingServiceImpl implements SettingService {
   private final ArticleService aService;
   private final ArticleReportRepository rrepo;
   private final QuestionRepository qrepo;
-  private final QuestionService qService;
+  private final ArticleRepository arepo;
+  @PersistenceContext
+  EntityManager em;
+
+  @Override
+  public Page<getMyChannelArticleList> articleListByUserid(channelArticleList vo) {
+      Pageable pageable = PageRequest.of(vo.getPageNum(), 10, Sort.by(Sort.Direction.DESC, "aid"));
+      if (vo.getAtitle() != null){
+          return arepo.getArticleListByUserIdAndSearchWithPageable(vo.getUserid(),vo.getAtitle(),pageable);
+      }
+      return arepo.getArticleListByUserIdWithPageable(vo.getUserid(), pageable);
+  }
 
   @Override
   public airUserDTO getByUserId(Long userid) {
@@ -55,9 +83,35 @@ public class SettingServiceImpl implements SettingService {
       if(isimage.isPresent()){
           uirepo.delete(isimage.get());
       }
-      log.info("09009090909090909099090909090909099090990909909090909090");
       uirepo.save(uImagesList.builder().airuser(airUser.builder().userid(userid).build()).fileName(fileName).idx(0).build());
   }
+
+  @Transactional
+  @Override
+  public Boolean articleRemove(Long aid) {
+    
+    QArticlesList articlesList = new QArticlesList("article");
+    QHashTags hashTags = new QHashTags("hashtags");
+    Qacomments comment = new Qacomments("comment");
+    Qalarm qalarm = new Qalarm("alarm");
+    QreportList qreportList = new QreportList("report");
+    QImagesList qImagesList = new QImagesList("img");
+    JPADeleteClause deleteImage = new JPADeleteClause(em, qImagesList);
+    JPADeleteClause deleteReport = new JPADeleteClause(em, qreportList);
+    JPADeleteClause deletehash = new JPADeleteClause(em, hashTags);
+    JPADeleteClause deleteClause = new JPADeleteClause(em, articlesList);
+    JPADeleteClause deleteComment = new JPADeleteClause(em, comment);
+    JPADeleteClause deleteAlarm = new JPADeleteClause(em, qalarm);
+
+    deleteImage.where(qImagesList.articles.aid.eq(aid)).execute();
+    deleteReport.where(qreportList.articles.aid.eq(aid)).execute();
+    deleteAlarm.where(qalarm.articleId.aid.eq(aid)).execute();
+    deleteComment.where(comment.articles.aid.eq(aid)).execute();
+    deletehash.where(hashTags.articles.aid.eq(aid)).execute();
+    deleteClause.where(articlesList.aid.eq(aid)).execute();
+    return true;
+  }
+
 
   @Override
   public String changePasswd(userid vo) {
@@ -74,13 +128,23 @@ public class SettingServiceImpl implements SettingService {
   }
 
   @Override
-  public List<reportDTO> getReportList(Long user) {
-    List<reportList> getList = rrepo.findByUserid(airUser.builder()
-        .userid(user)
-        .build());
-    return getList.stream().map((Function<reportList, reportDTO>) v -> {
-      return aService.reportEntitytoDTO(v);
-    }).collect(Collectors.toList());
+  public HashMap<String, Object> getReportList(settingArticleList vo) {
+    Pageable pageable = PageRequest.of(vo.getPageNum(), 5);
+    Page<reportList> getList = rrepo.findByUseridWithPageable(vo.getUserid(), pageable);
+      List<reportDTO> dto = getList.getContent().stream().map(new Function<reportList, reportDTO> () {
+        @Override
+        public reportDTO apply(reportList t) {
+            return aService.reportEntitytoDTO(t);
+        }
+      }).toList();
+      HashMap<String, Object> hash = new HashMap<>();
+      hash.put("page",  getList.getNumber());
+      hash.put("dto", dto);
+      hash.put("totalElement", getList.getTotalElements());
+      hash.put("totalPage", getList.getTotalPages());
+
+
+    return hash;
   }
 
   @Override
@@ -95,24 +159,21 @@ public class SettingServiceImpl implements SettingService {
   }
 
   @Override
-  public List<QuestionDTO> getQuestionList(Long userid) {
-    List<QuestionsList> result = qrepo.getQuestionList(airUser.builder()
-        .userid(userid)
-        .build());
-    return result.stream().map((Function<QuestionsList, QuestionDTO>) v -> {
-      return qService.EntitytoDTO(v);
-    }).collect(Collectors.toList());
+  public HashMap<String, Object> getQuestionList(settingArticleList vo) {
+    Pageable pageable = PageRequest.of(vo.getPageNum(), 5);
+    Page<QuestionsList> getList = qrepo.getQuestionListWithPageable(vo.getUserid(), pageable);
+    List<QuestionDTO> dto = getList.getContent().stream().map(new Function<QuestionsList, QuestionDTO> () {
+      @Override
+      public QuestionDTO apply(QuestionsList t) {
+          return QuestionDTO.builder().qid(t.getQid()).answerContext(t.getAnswerContext()).answered(t.isAnswered()).context(t.getContext()).title(t.getTitle()).userid(t.getUserid().getUserid()).build();
+      }
+    }).toList();
+    HashMap<String, Object> hash = new HashMap<>();
+    hash.put("page",  getList.getNumber());
+    hash.put("dto", dto);
+    hash.put("totalElement", getList.getTotalElements());
+    hash.put("totalPage", getList.getTotalPages());
+    return hash;
   }
 
 }
-
-// @Override
-// public Boolean remove2(Long aid) {
-// try {
-// arepo.deleteById(aid);
-// return true;
-// } catch (Exception e) {
-// e.printStackTrace();
-// return false;
-// }
-// }
